# django-htmx-todo

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
htmxrest/: asgi.py  settings.py  urls.py  views.py  wsgi.py
todo/: serializers.py  views.py
