[tool.poetry]
name = "django-htmx-todo"
version = "0.1.0"
description = ""
authors = ["grischan <grischan@gmail.com>"]
readme = "README.md"
packages = [{include = "django_htmx_todo"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-admin-interface = "^0.24.1"
djangorestframework = "^3.14.0"
django-htmx = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
